--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5",
     "yarn": "^1.22.19"
   }
 }
